--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "build:client3": "REACT_APP_API_URL=infoclient3 react-scripts build",
     "build:all": "npm run build:client1 && npm run build:client2 && npm run build:client3",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -53,5 +54,8 @@
     "transformIgnorePatterns": [
       "node_modules/(?!(axios)/)"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^10.10.0"
   }
 }
