--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm test && react-scripts build",
     "build:client1": "REACT_APP_API_URL=infoclient1 react-scripts build",
     "build:client2": "REACT_APP_API_URL=infoclient2 react-scripts build",
     "build:client3": "REACT_APP_API_URL=infoclient3 react-scripts build",
